# terra_space

./: .env.example  .gitignore  AGENTS.md  Backup-TerraSpaceDatabase.ps1  CLAUDE.md  GEMINI.md  NEW-PROJECT-CHECKLIST.md  README.md  Restore-TerraSpaceDatabase.ps1  Start-TerraSpace.ps1  Stop-TerraSpace.ps1  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: convert_gazetteer_to_alpha3.py
backend/tests/: staged_lm_studio_fake.py  test_actor_matching.py  test_actors_api.py  test_actors_service.py  test_app.py  test_app_settings.py  test_attachments_api.py  test_classifiers_validation.py  test_database.py  test_date_validation.py  test_documents_api.py  test_duplicate_detection.py  test_duplicate_resolution.py  test_event_edit_approve_reject.py  test_event_exploration_api.py  test_event_type_management.py  test_event_types_actors_api.py  test_events_api.py  test_extraction_log.py  test_extraction_log_api.py  test_extraction_validation.py  test_health.py  test_incomplete_extraction_stages.py  test_lm_studio.py  test_lm_studio_classifiers.py  test_lm_studio_config.py  test_lm_studio_extraction.py  test_lm_studio_signal_parser.py  test_location_coordinates.py  test_maps.py  test_migration_0002.py  test_migration_0003.py  test_migration_0004.py  test_migration_0005.py  test_migration_0008.py  test_migration_0010.py  test_migration_0011.py  test_migration_0012.py  test_migration_0013.py  (+6 more)
(+248 files in other folders)
