[project]
name = "terra-space-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiosqlite==0.22.1",
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "httpx2==2.5.0",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.41.0",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
